dataset1235/2025-2/805158916/users/1651421245/executions/1584167357_1319609354.log
== RUN (2025-08-27 14:38:59)
-- CODE: 
n1 = float(input("digite o numero "))
n2 = float(input( digite o numero2"))

media = n1 + n2 / 2
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
-- ERROR:
File "XXXX", line 2
    n2 = float(input( digite o numero2"))
                                      ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
-- ERROR:
File "XXXX", line 2
    n2 = float(input( digite o numero2"))
                                      ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
-- ERROR:
File "XXXX", line 2
    n2 = float(input( digite o numero2"))
                                      ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
-- ERROR:
File "XXXX", line 2
    n2 = float(input( digite o numero2"))
                                      ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
-- ERROR:
File "XXXX", line 2
    n2 = float(input( digite o numero2"))
                                      ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
-- ERROR:
File "XXXX", line 2
    n2 = float(input( digite o numero2"))
                                      ^
SyntaxError: unterminated string literal (detected at line 2)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:39:43)
-- CODE: 
n1 = float(input("digite o numero "))
n2 = float(input( "digite o numero "))

media = n1 + n2 / 2
print(media)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
digite o numero digite o numero 7.1
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
digite o numero digite o numero 14.5
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
digite o numero digite o numero 14.4
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
digite o numero digite o numero 11.25
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
digite o numero digite o numero 12.0
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
digite o numero digite o numero 7.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:40:03)
-- CODE: 
n1 = float(input("digite o numero "))
n2 = float(input( "digite o numero "))

media = (n1 + n2) / 2
print(media)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
digite o numero digite o numero 5.0
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
digite o numero digite o numero 9.5
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
digite o numero digite o numero 9.4
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
digite o numero digite o numero 7.5
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
digite o numero digite o numero 8.1
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
digite o numero digite o numero 5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:39:56)
-- CODE: 
n1 = float(input("digite o numero "))
n2 = float(input( "digite o numero "))

media = (n1 + n2) / 2
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
digite o numero digite o numero 5.0
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
digite o numero digite o numero 9.5
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
digite o numero digite o numero 9.4
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
digite o numero digite o numero 7.5
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
digite o numero digite o numero 8.1
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
digite o numero digite o numero 5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
